Removed help buttons. Removed option menu. Added icon to notes. Changed the look of measurement screens. Fixed issues with soft keyboard.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,16 +6,61 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_saved">SavedActivity</string>
     <string name="title_activity_view_saved">ViewSavedActivity</string>
-    <string name="title_activity_seetings">SeetingsActivity</string>
+    <string name="title_activity_settings">Settings</string>
     <string name="title_activity_create">CreateActivity</string>
     <string name="create">Create</string>
     <string name="cancel">Cancel</string>
-    <string name="gmail">Gmail</string>
+    <string name="email">e-mail</string>
     <string name="name">Name</string>
     <string name="gender">Gender</string>
     <string name="unit">Unit</string>
     <string name="title_activity_measurement">MeasurementActivity</string>
     <string name="title_activity_item">ItemActivity</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="centimeter">centimeter (cm)</string>
+    <string name="inch">Inch</string>
     <string name="help">\?</string>
+    <string name="head_girth">Head girth</string>
+    <string name="head_and_neck_length">Head and Neck length</string>
+    <string name="across_back_shoulder_width">Across back shoulder width</string>
+    <string name="shoulder_drop">Shoulder drop</string>
+    <string name="shoulder_slope_degrees">Shoulder slope degrees</string>
+    <string name="shoulder_length">Shoulder length</string>
+    <string name="shoulder_and_arm_length">Shoulder and arm length</string>
+    <string name="mid_neck_girth">Mid neck girth</string>
+    <string name="bust_girth">Bust girth</string>
+    <string name="upper_chest_girth">Upper chest girth</string>
+    <string name="arm_length">Arm length</string>
+    <string name="upper_arm_girth">Upper arm girth</string>
+    <string name="armscye_girth">Armscye girth</string>
+    <string name="wrist_girth">Wrist girth</string>
+    <string name="hip_girth">Hip girth</string>
+    <string name="waist_girth">Waist girth</string>
+    <string name="height">Height</string>
+    <string name="hip_height">Hip height</string>
+    <string name="heights">Heights</string>
+    <string name="shoulders">Shoulders</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
+    <string name="chest">Chest</string>
+    <string name="foot">Foot</string>
+    <string name="hand">Hand</string>
+    <string name="head">Head</string>
+    <string name="hip_and_waist">Hip and Waist</string>
+    <string name="leg">Leg</string>
+    <string name="neck">Neck</string>
+    <string name="notes">Notes</string>
+    <string name="pics">Pics</string>
+    <string name="front">Front</string>
+    <string name="side">Side</string>
+    <string name="back">Back</string>
+    <string name="trunk">Trunk</string>
+    <string name="person">Person</string>
+    <string name="arm">Arm</string>
+    <string name="new_string">New</string>
+    <string name="saved">Saved</string>
+    <string name="settings">Settings</string>
+    <string name="exit">Exit</string>
 
 </resources>
