Updated travis.yml. Added the feature to edit measurements.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,7 @@
     <string name="saved">Saved</string>
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
+    <string name="edit">Edit</string>
+    <string name="get_hdf">Get HDF</string>
 
 </resources>
