Removed "Save & Sync" button. Removed async task which didi sync. Connected Sync Adapter to syn measurement.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="exit">Exit</string>
     <string name="edit">Edit</string>
     <string name="get_hdf">Get HDF</string>
+    <string name="save">Save</string>
 
 </resources>
